message PB_BattleCharacterData {
    optional int32 character_id = 1;
    optional int32 id_param = 2;
    optional int32 character_type = 3;
    optional bool is_use_cur_hp_mp = 4;
    optional int32 level = 5;
    optional string name = 6;
    optional int32 quality = 7;
    optional int32 profession = 8;
    optional int32 race = 9;
    optional int32 weapon_type = 10;
    optional int32 weapon_id = 11;
    repeated int32 attr_list = 12; 
    
    optional int32 param = 13;
    optional int32 is_long_range_unit = 14;

    message SkillItem {
        optional uint32 skill_id = 1;
        optional uint32 skill_level = 2;
    }

    repeated SkillItem skill_list = 15;
    optional int32 capability = 16;
    optional int32 fly_flag = 17;           // 飞升阶段/次数(根据角色/宠物/伙伴)字段定义	
    optional int32 wear_element_type = 18;  // 携带的元素水晶类型
}